--- a/css/default_style.css
+++ b/css/default_style.css
@@ -128,4 +128,5 @@ ul#lista {
     padding: 0;
     display: flex;
     justify-content: center;
-    align-items: center;}
+    align-items: center;
+}
